--- a/QTranser/QTranse.xaml
+++ b/QTranser/QTranse.xaml
@@ -4,7 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:QTranser"
-             Loaded="QTranser_Loaded">
+             Loaded="QTranser_Loaded" 
+             
+             >
     <StackPanel 
         Orientation="Horizontal"
         HorizontalAlignment="Right"
@@ -32,7 +34,7 @@
             Fill="{Binding LogoColor}"
             MinWidth="11"
             Height="22" 
-            MouseLeftButtonDown="ShowQShower_MouseLeftButtonDown" 
+            MouseLeftButtonDown="Rectangle_MouseLeftButtonDown"
             MouseEnter="Rectangle_MouseEnter"
             />
     </StackPanel>
