--- a/QTranser/App/AppWindow.xaml
+++ b/QTranser/App/AppWindow.xaml
@@ -1,13 +1,14 @@
-﻿<Window x:Class="QTranser.QWindow"
+﻿<Window x:Class="QTranser.AppWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QTranser"
         mc:Ignorable="d"
-        Title="QWindow" Height="450" Width="234.5">
+        Title="AppWindow" 
+        Height="89.667" Width="328.667" Background="SeaGreen">
     <StackPanel>
-        <Border Width="200" Margin="0" Background="Blue">
+        <Border Margin="0 20 0 0" >
             <local:QTranse />
         </Border>
     </StackPanel>
