--- a/QTestsWindow/App.xaml
+++ b/QTestsWindow/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:QTestsWindow"
-             StartupUri="HttpClient.xaml">
+             StartupUri="HttpTest.xaml">
     <Application.Resources>
          
     </Application.Resources>
